Replaced SEARCH and MOVE methods by POST method, changed URLs and continued on documentation of configuration items
